[gd_scene load_steps=8 format=2]

[ext_resource path="res://Stuff/Boss Door/BossDoor.gd" type="Script" id=1]
[ext_resource path="res://Stuff/Button and Block/Opened Wooden Block.png" type="Texture" id=2]
[ext_resource path="res://Stuff/Button and Block/Wooden Block.png" type="Texture" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "open",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "closed",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "open",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "closed",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "open",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "closed",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 8, 32 )

[node name="BossDoor" type="StaticBody2D"]
script = ExtResource( 1 )

[node name="AnimatedBlock1" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "closed"

[node name="AnimatedBlock2" type="AnimatedSprite" parent="."]
position = Vector2( 0, 16 )
frames = SubResource( 2 )
animation = "closed"

[node name="AnimatedBlock3" type="AnimatedSprite" parent="."]
position = Vector2( 0, 32 )
frames = SubResource( 3 )
animation = "closed"

[node name="AnimatedBlock4" type="AnimatedSprite" parent="."]
position = Vector2( 0, 48 )
frames = SubResource( 3 )
animation = "closed"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 24 )
shape = SubResource( 4 )
